2001-07-26  Chema Celorio  <chema@celorio.com>

	* htmlimage.c (html_image_factory_area_updated): remove a
	g_warning

2001-07-27  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (write_pre_tags): test if flow doesn't contain
	table, in this case we don't want to save <BR> or \n

	* htmltablecell.c (save): commnted out my hack for &nbsp; saving
	to empty cells

	* htmlengine.c (parse_table): insert empty paragraph in empty
	cells

2001-07-26  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_command): update styles if needed

	* gtkhtml-enums.h: added commands for delete table/row/col/cell
	contents

	* gtkhtml.c (command): use gtk_html_undo/redo rather than
	html_engine_ ones

	* htmltablecell.c (merge): fixed cells merging

	* gtkhtml.c (command): set update_styles for more commands
	(update_styles): fixed indentation change signal emiting
	(key_press_event): don't check cursor position for update, it's
	obsolete

2001-07-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_table_set_spacing): added
	relative parameter
	(html_engine_table_set_padding): ditto
	(table_set_padding): check for t != NULL
	(table_set_spacing): ditto

	* keybindingsrc.ms: added bindings for table spacing/padding, I
	must change spell checking bindings to avoid conflicts :-(

	* gtkhtml-enums.h: added new command for table spacing/padding
	change

2001-07-25  Jon Trowbridge  <trow@ximian.com>

	* htmlsearch.c (html_search_set_forward): Check that
	search != NULL. (Bug #4869)

2001-07-24  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_get_table): don't fail,
	just return NULL

	* htmlengine-edit-tablecell.c (html_engine_get_table_cell): don't
	fail, just return NULL

	* htmlengine-edit-cut-and-paste.c (append_object): remove unwanted
	empty flows, fix cursor position

	* htmlengine-edit.c (html_engine_next_cell): fixed for multi flow
	cells
	(html_engine_prev_cell): likewise

	* htmlengine-edit-tablecell.c